(mkosarek) Small styling issues to prevent items from being cutoff on the bottom

--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -19,7 +19,7 @@ body {
     padding: 0;
     margin: 0;
     background-color: white;
-    overflow-y: hidden;
+    overflow-y: auto;
     font-family:Lato,Arial;
 }
 
@@ -29,7 +29,7 @@ body {
     display: flex;
     flex-direction: column;
     font-size: 16px;
-    overflow-y: hidden;
+    overflow-y: auto;
     margin-left: auto;
     margin-right: auto;
     position: relative;
@@ -142,12 +142,19 @@ main {
 }
 
 #general-configuration-editor {
-    height: calc(100% - 179px - 3rem);
     overflow-y: auto;
-    padding-top: 1rem;
     padding-left: 1rem;
     padding-right: 1rem;
     border-bottom: 1px solid var(--border-color);
+}
+
+.configuration-editor {
+    height: 100%;
+}
+
+.configuration-editor .widget-wrapper {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
 }
 
 #run-information-console {
